Fixed text color in dark mode for CSS border (#2029)

--- a/live-examples/css-examples/backgrounds-and-borders/border-image.css
+++ b/live-examples/css-examples/backgrounds-and-borders/border-image.css
@@ -6,6 +6,7 @@
     justify-content: center;
     padding: 50px;
     background: #fff3d4;
+    color: #000;
     border: 30px solid;
     border-image: url('/media/examples/border-diamonds.png') 30 round;
     font-size: 1.2em;
